--- a/LineUp/app/src/main/res/layout/activity_mypage.xml
+++ b/LineUp/app/src/main/res/layout/activity_mypage.xml
@@ -36,12 +36,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="120dp">
-
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/bef_kakao"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="USER"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"/>
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
