--- a/LineUp/app/src/main/res/values/styles.xml
+++ b/LineUp/app/src/main/res/values/styles.xml
@@ -13,5 +13,11 @@
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
+    <style name="starratingbar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/star_rating_bar</item>
+        <item name="android:minHeight">40dp</item>
+        <item name="android:maxHeight">40dp</item>
+        <item name="android:thumb">@null</item>
+        <item name="android:indeterminateOnly">false</item>
+    </style>
 </resources>
