button click animation

--- a/LineUp/app/src/main/res/layout/activity_main.xml
+++ b/LineUp/app/src/main/res/layout/activity_main.xml
@@ -29,20 +29,27 @@
             app:contentInsetStart="0dp"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
-            <Button
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/search"
+            <ImageButton
+                android:stateListAnimator="@anim/anim"
+                android:background="@anim/ripple"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/search"
                 android:layout_marginLeft="15dp"/>
-            <Button
+            <ImageButton
+                android:stateListAnimator="@anim/anim"
                 android:layout_marginLeft="10dp"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/map"/>
-            <Button
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/mypage"
+                android:background="@anim/ripple"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/map" />
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:stateListAnimator="@anim/anim"
+                android:background="@anim/ripple"
+                android:src="@drawable/mypage"
+                android:clickable="true"
                 android:layout_marginRight="15dp"
                 android:layout_gravity="right"/>
 
