--- a/LineUp/app/src/main/res/layout/res_info.xml
+++ b/LineUp/app/src/main/res/layout/res_info.xml
@@ -61,25 +61,25 @@
                         android:layout_height="match_parent">
                         <LinearLayout
                             android:gravity="center"
-                            android:layout_width="40dp"
+                            android:layout_width="55dp"
                             android:layout_height="match_parent">
                             <TextView
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_height="15dp"
                                 android:text="3.0"
                                 android:textColor="@color/maincolor"/>
                         </LinearLayout>
                         <LinearLayout
-                            android:layout_width="90dp"
+                            android:layout_width="80dp"
                             android:layout_height="match_parent">
                             <RatingBar
-                                android:layout_width="match_parent"
-                                android:layout_height="20dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="15dp"
                                 style="@style/starratingbar"
                                 android:layout_gravity="center"
                                 android:numStars="5"
                                 android:stepSize="0.5"
-                                android:rating="5.0"/>
+                                android:rating="3.0"/>
                         </LinearLayout>
 
                     </LinearLayout>
