--- a/LineUp/app/src/main/res/values/dimens.xml
+++ b/LineUp/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="touch_raise">16dp</dimen>
+    <dimen name="fab_size">56dp</dimen>
+
+    <dimen name="button_elevation">0dp</dimen>
+    <dimen name="button_press_elevation">-5dp</dimen>
 </resources>
