--- a/LineUp/app/src/main/res/layout/res_list_item.xml
+++ b/LineUp/app/src/main/res/layout/res_list_item.xml
@@ -30,6 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="30dp">
                     <TextView
+                        android:id="@+id/res_name"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="아웃백스테이크"
@@ -48,6 +49,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="4">
                         <TextView
+                            android:id="@+id/res_location"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:textSize="15dp"
@@ -61,6 +63,7 @@
                         android:gravity="right"
                         android:layout_weight="1">
                         <TextView
+                            android:id="@+id/res_distance"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:textSize="15dp"
@@ -93,6 +96,7 @@
                         android:gravity="right"
                         android:layout_weight="1">
                         <TextView
+                            android:id="@+id/res_waitpeople"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:textSize="15dp"
