mypage-proto & map

--- a/LineUp/app/src/main/res/layout/activity_main.xml
+++ b/LineUp/app/src/main/res/layout/activity_main.xml
@@ -36,12 +36,14 @@
                 android:src="@drawable/search"
                 android:layout_marginLeft="15dp"/>
             <ImageButton
+                android:id="@+id/mapBtn"
                 android:stateListAnimator="@anim/anim"
                 android:layout_marginLeft="10dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/map" />
             <ImageButton
+                android:id="@+id/mypageBtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:stateListAnimator="@anim/anim"
