--- a/LineUp/app/src/main/res/layout/activity_mypage.xml
+++ b/LineUp/app/src/main/res/layout/activity_mypage.xml
@@ -1,63 +1,39 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ru.noties.scrollable.ScrollableLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp">
-            <Button
-                android:id="@+id/backBtn"
-                android:background="@drawable/back"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="15dp"
-                android:layout_gravity="center_vertical"/>
-            <View
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-            </View>
-            <Button
-                android:background="@drawable/setting"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginRight="15dp"
-                android:layout_gravity="center_vertical"
-                android:id="@+id/settingBtn" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="120dp"
-            android:layout_height="170dp"
-            android:orientation="vertical"
-            android:layout_centerInParent="true">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="120dp">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@drawable/bef_kakao"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="USER"
-                    android:gravity="center"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"/>
-            </LinearLayout>
-        </LinearLayout>
-    </RelativeLayout>
+    android:layout_height="match_parent"
+    android:id="@+id/scrollable_layout"
+    app:scrollable_maxScroll="430dp"
+    app:scrollable_considerIdleMillis="125"
+    app:scrollable_friction="0.075"
+    app:scrollable_closeUpAnimationMillis="250"
+    app:scrollable_defaultCloseUp="true"
+    app:scrollable_scrollerFlywheel="false"
+    app:scrollable_closeUpAnimatorInterpolator="@android:anim/accelerate_decelerate_interpolator">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/my_page_header"
+            layout="@layout/activity_mypage_header"
+            />
+
+        <com.unist.am.lineup.TabsLayout_myPage
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tabs_height"
+            android:background="@color/white"
+            android:id="@+id/mypage_tabs" />
+
     </LinearLayout>
-</LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/tabs_height"
+        android:id="@+id/mypage_view_pager" />
+
+</ru.noties.scrollable.ScrollableLayout>
