--- a/LineUp/app/src/main/res/layout/res_info_tab1.xml
+++ b/LineUp/app/src/main/res/layout/res_info_tab1.xml
@@ -37,6 +37,7 @@
                             android:textSize="15dp"/>
                     </LinearLayout>
                     <Button
+                        android:id="@+id/menu"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
