--- a/LineUp/app/src/main/res/layout/res_info_tab1.xml
+++ b/LineUp/app/src/main/res/layout/res_info_tab1.xml
@@ -42,7 +42,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="15dp"
-                        android:layout_alignParentRight="true"/>
+                        android:layout_alignParentRight="true"
+                        android:background="@drawable/menu"/>
                 </RelativeLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -341,17 +342,7 @@
                     android:layout_marginRight="30dp"
                     android:layout_alignParentRight="true"/>
             </RelativeLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:gravity="center_vertical"
-                    android:textSize="12dp"
-                    android:textColor="@color/black"
-                    android:text="@string/sample_num"/>
-            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
