--- a/LineUp/app/src/main/res/layout/view_tab_item_mypage.xml
+++ b/LineUp/app/src/main/res/layout/view_tab_item_mypage.xml
@@ -8,4 +8,4 @@
     android:padding="8dip"
     android:gravity="center"
     android:textAppearance="?android:attr/textAppearanceMedium"
-    android:textColor="@color/tab_text_color_mypage" />
+    android:textColor="@color/tab_text_color2" />
