separation depend on API version

--- a/LineUp/app/src/main/res/layout-v21/activity_main.xml
+++ b/LineUp/app/src/main/res/layout-v21/activity_main.xml
@@ -31,7 +31,7 @@
 
             <ImageButton
                 android:stateListAnimator="@anim/anim"
-                android:background="@color/white"
+                android:background="@anim/ripple"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/search"
@@ -39,7 +39,7 @@
             <ImageButton
                 android:stateListAnimator="@anim/anim"
                 android:layout_marginLeft="10dp"
-                android:background="@color/white"
+                android:background="@anim/ripple"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/map" />
@@ -47,7 +47,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:stateListAnimator="@anim/anim"
-                android:background="@color/white"
+                android:background="@anim/ripple"
                 android:src="@drawable/mypage"
                 android:clickable="true"
                 android:layout_marginRight="15dp"
