--- a/LineUp/app/src/main/res/layout/res_info_tab1.xml
+++ b/LineUp/app/src/main/res/layout/res_info_tab1.xml
@@ -74,7 +74,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
                             <TextView
-                                android:id="@+id/time"
+                                android:id="@+id/res_time"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
@@ -219,7 +219,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
                             <TextView
-                                android:id="@+id/style"
+                                android:id="@+id/res_cuisine"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
@@ -248,7 +248,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
                             <TextView
-                                android:id="@+id/homepage"
+                                android:id="@+id/res_webpage"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
@@ -277,7 +277,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
                             <TextView
-                                android:id="@+id/address"
+                                android:id="@+id/res_location"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
@@ -306,7 +306,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
                             <TextView
-                                android:id="@+id/phone"
+                                android:id="@+id/res_phonenum"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center_vertical"
