--- a/LineUp/app/src/main/res/layout/res_info_head.xml
+++ b/LineUp/app/src/main/res/layout/res_info_head.xml
@@ -26,6 +26,7 @@
                 android:gravity="center_horizontal"
                 android:textColor="#BDBDBD"/>
             <TextView
+                android:id="@+id/res_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
