--- a/LineUp/app/src/main/res/layout/mypage_tab03.xml
+++ b/LineUp/app/src/main/res/layout/mypage_tab03.xml
@@ -9,10 +9,12 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            ></LinearLayout>
+            android:text="LineUp Right now!"
+            android:textSize="25dp"
+            ></TextView>
     </LinearLayout>
 
 </ScrollView>
