--- a/LineUp/app/src/main/res/layout/mypage_tab03_reserv.xml
+++ b/LineUp/app/src/main/res/layout/mypage_tab03_reserv.xml
@@ -3,20 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/scroll_view_my_tab01">
+    android:id="@+id/scroll_view_my_tab03_reserv">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <TextView
+            android:id="@+id/cancel_btn"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/readay"/>
-
+            android:layout_height="wrap_content"
+            android:text="CANCEL"
+            android:textSize="30dp"
+            ></TextView>
     </LinearLayout>
 
 </ScrollView>
