fuck you android

--- a/LineUp/app/src/main/res/layout/res_info_head.xml
+++ b/LineUp/app/src/main/res/layout/res_info_head.xml
@@ -11,6 +11,7 @@
             android:layout_height="match_parent" />
     </LinearLayout>
     <LinearLayout
+        android:background="@color/white"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="180dp">
@@ -70,16 +71,17 @@
                                 android:textColor="@color/maincolor"/>
                         </LinearLayout>
                         <LinearLayout
-                            android:layout_width="80dp"
-                            android:layout_height="match_parent">
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical">
                             <RatingBar
                                 android:layout_width="wrap_content"
-                                android:layout_height="15dp"
+                                android:layout_height="10dp"
                                 style="@style/starratingbar"
                                 android:layout_gravity="center"
                                 android:numStars="5"
                                 android:stepSize="0.5"
-                                android:rating="3.0"/>
+                                android:rating="5.0"/>
                         </LinearLayout>
 
                     </LinearLayout>
@@ -107,7 +109,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/add_star"
-                        android:textSize="16dp"
+                        android:textSize="13dp"
                         android:textStyle="bold"
                         android:gravity="center"
                         android:textColor="#BDBDBD"/>
