--- a/LineUp/app/src/main/res/layout-v21/activity_mypage_header.xml
+++ b/LineUp/app/src/main/res/layout-v21/activity_mypage_header.xml
@@ -13,7 +13,7 @@
             android:layout_height="60dp">
             <ImageButton
                 android:id="@+id/backBtn"
-                android:background="@color/white"
+                android:background="@anim/ripple"
                 android:src="@drawable/back"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -26,7 +26,7 @@
             </View>
             <ImageButton
                 android:src="@drawable/setting"
-                android:background="@color/white"
+                android:background="@anim/ripple"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginRight="15dp"
