--- a/LineUp/app/src/main/res/layout-v21/res_info_tab1.xml
+++ b/LineUp/app/src/main/res/layout-v21/res_info_tab1.xml
@@ -40,14 +40,13 @@
                         android:id="@+id/menu"
                         android:gravity="center"
                         android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_height="50dp"                  android:background="@anim/ripple"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="15dp"
                         android:layout_alignParentRight="true">
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
-                            android:background="@color/white"
                             android:src="@drawable/menu"/>
                     </LinearLayout>
                 </RelativeLayout>
