--- a/LineUp/app/src/main/res/layout/activity_main.xml
+++ b/LineUp/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".MainActivity">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -19,15 +12,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:layout_gravity="left"
-            android:layout_marginLeft="-72dp"
-            android:padding="0dp"
-            android:contentInsetRight="0dp"
-            android:contentInsetStart="0dp"
-            android:contentInsetLeft="0dp"
-            app:contentInsetRight="0dp"
-            app:contentInsetLeft="0dp"
-            app:contentInsetStart="0dp"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+            android:layout_marginLeft="-82dp"
+            android:padding="0dp">
 
             <ImageButton
                 android:stateListAnimator="@anim/anim"
@@ -35,11 +21,11 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/search"
-                android:layout_marginLeft="15dp"/>
+                android:layout_marginLeft="10dp"/>
             <ImageButton
                 android:id="@+id/mapBtn"
                 android:stateListAnimator="@anim/anim"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="0dp"
                 android:background="@color/white"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -52,16 +38,15 @@
                 android:background="@color/white"
                 android:src="@drawable/mypage"
                 android:clickable="true"
-                android:layout_marginRight="15dp"
+                android:layout_marginRight="0dp"
                 android:layout_gravity="right"/>
+
 
         </android.support.v7.widget.Toolbar>
 
 
-    </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
-        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ListView
@@ -71,7 +56,5 @@
 
         </ListView>
     </LinearLayout>
+</LinearLayout>
 
-
-
-</android.support.design.widget.CoordinatorLayout>
