--- a/LineUp/app/src/main/res/layout/res_info_head.xml
+++ b/LineUp/app/src/main/res/layout/res_info_head.xml
@@ -4,9 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
+        android:id="@+id/resinfo_frame"
         android:layout_width="match_parent"
         android:layout_height="250dp">
         <ImageView
+            android:id="@+id/res_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
