--- a/LineUp/app/src/main/res/layout-v21/activity_main.xml
+++ b/LineUp/app/src/main/res/layout-v21/activity_main.xml
@@ -7,6 +7,7 @@
 
 
     <android.support.v7.widget.Toolbar
+        android:elevation="3dp"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
