--- a/LineUp/app/src/main/res/layout-v22/activity_main.xml
+++ b/LineUp/app/src/main/res/layout-v22/activity_main.xml
@@ -9,6 +9,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
+        android:elevation="3dp"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:layout_gravity="left"
