--- a/LineUp/app/src/main/res/layout/activity_main.xml
+++ b/LineUp/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -16,6 +15,7 @@
             android:padding="0dp">
 
             <LinearLayout
+                android:id="@+id/searchBtn"
                 android:stateListAnimator="@anim/anim"
                 android:background="@color/white"
                 android:layout_width="50dp"
@@ -56,12 +56,14 @@
                     android:layout_height="25dp"
                     android:src="@drawable/mypage"/>
             </LinearLayout>
-
-
         </android.support.v7.widget.Toolbar>
 
 
-
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -72,5 +74,16 @@
 
         </ListView>
     </LinearLayout>
+        <FrameLayout
+            android:id="@+id/lDrawer"
+            android:layout_gravity= "start"
+            android:layout_width= "240.0dip"
+            android:layout_height="fill_parent"
+            android:clickable="true"
+            android:background="#d4d4d4">
+
+        </FrameLayout>
+    </android.support.v4.widget.DrawerLayout>
+
 </LinearLayout>
 
