--- a/LineUp/app/src/main/res/layout/mypage_tab01.xml
+++ b/LineUp/app/src/main/res/layout/mypage_tab01.xml
@@ -8,15 +8,13 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="200dp"
             android:gravity="center"
-            android:text="@string/readay"/>
-
+            android:textColor="@color/black"
+            android:text="@string/no_rec"/>
     </LinearLayout>
 
 </ScrollView>
