--- a/LineUp/app/src/main/res/layout/mypage_tab02.xml
+++ b/LineUp/app/src/main/res/layout/mypage_tab02.xml
@@ -8,12 +8,13 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:text="@string/readay"/>
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:text="@string/no_fav"/>
     </LinearLayout>
 
 </ScrollView>
