--- a/LineUp/app/src/main/res/layout/mypage_tab03.xml
+++ b/LineUp/app/src/main/res/layout/mypage_tab03.xml
@@ -8,13 +8,13 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="LineUp Right now!"
-            android:textSize="25dp"
-            ></TextView>
+            android:layout_height="200dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:text="@string/no_rev"/>
     </LinearLayout>
 
 </ScrollView>
