--- a/LineUp/app/src/main/res/layout/res_info_tab2.xml
+++ b/LineUp/app/src/main/res/layout/res_info_tab2.xml
@@ -8,11 +8,13 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="wrap_content">
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            ></LinearLayout>
+            android:layout_height="200dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:text="@string/no_review"/>
     </LinearLayout>
 
 </ScrollView>
