--- a/LineUp/app/src/main/res/color/tab_text_color2.xml
+++ b/LineUp/app/src/main/res/color/tab_text_color2.xml
@@ -7,6 +7,6 @@
     <item android:state_selected="true"
         android:color="@color/white" />
 
-    <item android:color="@color/black" />
+    <item android:color="@color/white_disabled" />
 
 </selector>
