--- a/LineUp/app/src/main/res/values/colors.xml
+++ b/LineUp/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="maincolor">#FFA000</color>
-    <color name="white_disabled">#9bcdcdcd</color>
+    <color name="white_disabled">#ADADAD</color>
     <color name="header_background">#FF226666</color>
     <color name="tabs_background">#FF004d40</color>
     <color name="dialog_placeholder_color">#aa000000</color>
