--- a/LineUp/app/src/main/res/layout/reservation_page.xml
+++ b/LineUp/app/src/main/res/layout/reservation_page.xml
@@ -204,20 +204,28 @@
         android:layout_height="35dp"
         android:gravity="center_horizontal">
         <LinearLayout
-            android:layout_width="120dp"
-            android:layout_height="match_parent"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
             android:gravity="center">
-            <Button
+            <RelativeLayout
                 android:id="@+id/confirm_btn"
-                android:background="@drawable/lineup"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/lineup"
                 android:gravity="center"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:textColor="@color/black"/>
-
+                android:textColor="@color/black">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/line_up"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/lineup"
+                    android:gravity="center"
+                    android:textSize="10dp"
+                    android:textStyle="bold"/>
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
