--- a/LineUp/app/src/main/res/layout-v22/activity_main.xml
+++ b/LineUp/app/src/main/res/layout-v22/activity_main.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    style="@style/AppTheme"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="match_parent">
 
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:elevation="3dp"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:layout_gravity="left"
-        android:layout_marginLeft="-82dp"
-        android:padding="0dp">
+        android:layout_marginLeft="-82dp">
 
         <LinearLayout
             android:id="@+id/searchBtn"
