--- a/LineUp/app/src/main/res/layout-v22/activity_mypage_header.xml
+++ b/LineUp/app/src/main/res/layout-v22/activity_mypage_header.xml
@@ -11,19 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp">
-            <LinearLayout
-                android:id="@+id/backBtn"
-                android:background="@anim/ripple"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:layout_marginLeft="15dp"
-                android:layout_gravity="center_vertical">
-                <ImageView
-                    android:src="@drawable/back"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp" />
-            </LinearLayout>
+
             <View
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -55,7 +43,7 @@
                     android:id="@+id/profile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/bef_kakao"/>
+                    android:src="@drawable/mypage"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
