--- a/LineUp/app/src/main/res/layout/res_list_item.xml
+++ b/LineUp/app/src/main/res/layout/res_list_item.xml
@@ -84,10 +84,22 @@
                     android:orientation="horizontal"
                     android:layout_height="20dp">
                     <LinearLayout
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="4">
-
+                        <ImageView
+                            android:src="@drawable/star"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp" />
+                        <TextView
+                            android:layout_marginLeft="2dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/maincolor"
+                            android:textSize="15dp"
+                            android:text="5.0"/>
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
