--- a/LineUp/app/src/main/res/values-v21/styles.xml
+++ b/LineUp/app/src/main/res/values-v21/styles.xml
@@ -5,4 +5,10 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#FFFFFF</item>
+        <item name="colorPrimaryDark">#FFA000</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 </resources>
