--- a/LineUp/app/src/main/res/layout/activity_login.xml
+++ b/LineUp/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
         android:layout_width="70dp"
         android:layout_height="70dp">
         <ImageView
+            android:id="@+id/owner_btn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/small_logo"/>
