--- a/LineUp/app/src/main/res/layout/owner_listitem.xml
+++ b/LineUp/app/src/main/res/layout/owner_listitem.xml
@@ -17,6 +17,7 @@
                 android:layout_height="50dp"
                 android:src="@drawable/round_logo" />
             <TextView
+                android:id="@+id/cus_priority"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -29,6 +30,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent">
             <TextView
+                android:id="@+id/cus_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -41,6 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent">
             <TextView
+                android:id="@+id/cus_party"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -53,6 +56,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent">
             <TextView
+                android:id="@+id/cus_time"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -65,6 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent">
             <TextView
+                android:id="@+id/cus_method"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
